<resources>
    <string name="app_name">Surveys</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_question">Forgot?</string>
    <string name="login">Login</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_connection">No internet connection</string>
    <string name="today">Today</string>
    <string name="logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="unauthorized_error">Your login session has expired! Please login again.</string>
</resources>